# SpringAlgobowl25

./: .gitignore  1000.txt  1002.txt  1004.txt  1005.txt  1010.txt  1011.txt  970.txt  972.txt  975.txt  984.txt  992.txt  997.txt  CMakeLists.txt  README.md  autograder.py  basis..py  bruh.py  gmon.out  hope.txt  huh.py  main.cpp  please.py  testgen.py  two.py
best_outputs/: input_group1001_473464.out  input_group1007_249076.out  input_group1015_87597.out  input_group963_891510.out  input_group963_892269.out  input_group963_best.out  input_group968_29410.out  input_group970_381499.out  input_group974_935659.out  input_group975_500607.out  input_group976_545560.out  input_group978_722072.out
inputs/: input_group1000.txt  input_group1001.txt  input_group1002.txt  input_group1003.txt  input_group1004.txt  input_group1005.txt  input_group1006.txt  input_group1007.txt  input_group1008.txt  input_group1009.txt  input_group1010.txt  input_group1011.txt  input_group1012.txt  input_group1013.txt  input_group1014.txt  input_group1015.txt  input_group1016.txt  input_group1017.txt  input_group1018.txt  input_group1019.txt  input_group1021.txt  input_group1022.txt  input_group1023.txt  input_group1024.txt  input_group963.txt  input_group964.txt  input_group965.txt  input_group966.txt  input_group967.txt  input_group968.txt  input_group969.txt  input_group970.txt  input_group971.txt  input_group972.txt  input_group973.txt  input_group974.txt  input_group975.txt  input_group976.txt  input_group977.txt  input_group978.txt  (+21 more)
tests/: SOLVEABLE.out  hw5-2.test  hw5-3.out  hw5-3.test  ninetiletree.test  one.out  oneALT.out  readme.md  solveable.test  test1.test  test10  test11  test12  test13  test14.test  test15  test16.test  test17.test  test2.test  test3  test4  test5.out  test7  (+7 more)
(+290 files in other folders)
